--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,30 @@
 /* Untuk Tablet */
 @media all and (max-width: 1000px) {
+	header {
+		font-size: 12px;
+	}
+
+	.header-logo {
+	margin: 0px 5px;
+	letter-spacing: 0px; 
+	}
+
+	.header-list a {
+	padding: 5px 5px;
+	color: white;
+	letter-spacing: 1px;
+	float: right;
+	margin: 5px 5px;
+	}
+
+	.header-a {
+		  height: 50px;
+	}
+
+	.header-b {
+	margin-top: 55px;
+	letter-spacing: 5px;
+	}
 }
 
 /* Untuk Smartphone */
@@ -9,5 +34,8 @@
 	}
 	.menu-icon {
 		display: block;
+	}
+	header {
+		font-size: 10px;
 	}
 }
